--- a/Test/rp_remote_acquire/Makefile
+++ b/Test/rp_remote_acquire/Makefile
@@ -10,7 +10,7 @@
 #
 
 # List of compiled object files (not yet linked to executable)
-OBJS = main.o options.o scope.o transfer.o
+OBJS = main.o options.o scope.o transfer.o asg.o
 # List of raw source files (all object files, renamed from .o to .c)
 SRCS = $(subst .o,.c, $(OBJS)))
 
